<resources>
    <string name="app_name">TravelTrace</string>
    <string name="traveltrace">TravelTrace</string>
    <!--    Inicio de Sesión-->
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="login_google">INICIAR SESIÓN CON GOOGLE</string>
    <string name="signup">Registrarse</string>
    <string name="forgot">Recuperar contraseña</string>
    <string name="re_password">Repetir contraseña</string>
    <string name="name">Nombre</string>
    <string name="signup_google">Registrarse con Google</string>
    <!--    NavBar-->
    <string name="profile">Perfil</string>
    <string name="home">Home</string>
    <string name="explore">Explorar</string>
    <!--   EL RESTO -->
    <string name="logout">Cerrar Sesión</string>
    <string name="toRecover">Ingrese su correo electrónico para recuperar su contraseña. Se le enviará un correo</string>
    <string name="recover">Enviar</string>
    <string name="wrong">Credenciales Incorrectas</string>
    <string name="wrong_email_recover">No existe ningún usuario registrado con ese email</string>
    <string name="sended">Email enviado</string>
    <string name="empty_email">Correo Electrónico Inválido</string>
    <string name="verify">Estado de verificación Email</string>
    <string name="notVerify">Verificar Email</string>
    <string name="wrong_login">Credenciales Incorrectas</string>
    <string name="wrong_email">Email Invalido</string>
    <string name="wrong_passw">Contraseña Invalida</string>
    <string name="repete">Repita la contraseña</string>
    <string name="passw_dont_match">Las contraseñas no coinciden</string>
    <string name="signup_user_name">Ingrese nombre de usuario</string>
    <string name="change_passw">Cambiar Contraseña</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="save">Guardar</string>
    <string name="title_activity_detailed_trip">DetailedTripActivity</string>
    <string name="actual_password">Contraseña Actual</string>
    <string name="next">Continuar</string>
    <string name="wait">Espere por favor</string>
    <string name="seleccionar_ubicacion">Seleccionar Ubicación</string>
    <string name="agregar_contenido_multimedia">Agregar contenido Multimedia:</string>
    <string name="gasto">Gasto</string>
    <string name="crear">Crear</string>
    <string name="a">A:</string>
    <string name="de">De:</string>
    <string name="vuelo">Vuelo</string>
    <string name="monto">Monto</string>
    <string name="categor_a">Categoría:</string>
    <string name="notas">Notas...</string>
    <string name="camara">Camara</string>
    <string name="galer_a">Galería</string>
    <string name="hora">Hora</string>
    <string name="nombre_el_punto_de_inter_s">Nombre del Punto de Interés</string>
    <string name="google">Google</string>
    <string name="Lorem_ipsum_3_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc gravida, ante vel sollicitudin scelerisque, neque orci cursus lectus, in facilisis urna nibh eu arcu. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus eget metus accumsan, dapibus eros vitae, accumsan leo. Quisque sodales velit ex, ultrices facilisis tortor consequat eu.</string>
    <string name="nombre_de_la_ubi">Nombre de la ubicación</string>
    <string name="direcci_n_de_la_ubi">Dirección de la ubicación</string>
    <string name="nombre_de_PI">Nombre de Punto de Interés</string>
    <string name="stop_cover">Stop Cover</string>
    <string name="fecha">Fecha</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="compartir">Compartir</string>
    <string name="a_adir_im_genes">Añadir Imágenes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>