<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity"
    android:background="@color/semi_light_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_ll_std">

        <ImageView
            android:layout_width="300sp"
            android:layout_height="300sp"
            android:layout_marginTop="-20dp"
            android:contentDescription="@string/traveltrace"
            android:src="@drawable/icon_travel_trace" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_min"
            android:layout_margin="@dimen/margin_touch_min"
            android:autofillHints="true"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/padding_ll_std"
            android:drawableTint="@color/white"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/font_medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touch_min"
                android:layout_margin="@dimen/margin_touch_min"
                android:autofillHints="true"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/padding_ll_std"
                android:drawableTint="@color/white"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:textSize="@dimen/font_medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_touch_min"
            android:layout_marginEnd="@dimen/margin_touch_min"
            android:background="@color/white"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/wrong"
            android:textSize="@dimen/font_std"
            android:textStyle="bold"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_min"
            android:layout_margin="@dimen/margin_touch_min"
            android:text="@string/login"
            android:background="@drawable/bt_rounded_corner"
            android:textSize="@dimen/font_std" />

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_min"
            android:layout_margin="@dimen/margin_touch_min"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/forgot"
            android:textSize="@dimen/font_medium" />

        <LinearLayout
            android:id="@+id/btn_login_google"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_margin="8sp"
            android:background="@drawable/bt_rounded_corner"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/touch_min"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="-15sp"
                android:padding="@dimen/padding_touch_min"
                android:contentDescription="@string/google"
                android:src="@drawable/ic_login_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/touch_min"
                android:backgroundTint="@color/gray"
                android:gravity="center"
                android:text="@string/login_google"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/font_std"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_min"
            android:layout_margin="@dimen/margin_touch_min"
            android:text="@string/signup"
            android:background="@drawable/bt_rounded_corner"
            android:textSize="@dimen/font_std" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>